[package]
name = "statim_db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[toolchain]
channel = "nightly"

[dependencies]
anyhow = "1.0"
lazy_static = "1.4.0"
tokio = { version = "1.25.0", features = ["full"] }
partial_application = "0.2.1"
#new 
tap = "1.0.1"
nom = "7"

[dev-dependencies]
env_logger = "0.9.0"
test-log = "0.2.11"
pretty_assertions = "1.3.0"
