[package]
name = "statim_macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
quote = "1.0.27"
syn = {version = "2.0.16", features = ["full", "extra-traits", "derive", "parsing", "printing", "clone-impls", "proc-macro"]}
proc-macro2 = "1.0.58"
lazy_static = "1.4.0"
